<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/twlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal"
        android:text="@string/action_sign_in"
        android:textAllCaps="true"
        android:textSize="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:background="@drawable/etbackground"
        android:fontFamily="@font/roboto"
        android:hint="@string/prompt_email_or_username"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:selectAllOnFocus="true"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/password"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/etbackground"
        android:fontFamily="@font/roboto"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="20dp"
        android:selectAllOnFocus="true"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login"
        android:layout_width="345dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main"
        android:fontFamily="@font/roboto"
        android:text="@string/action_sign_in"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook" />


    <TextView
        android:id="@+id/forpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="370dp"
        android:background="@drawable/linkbackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal"
        android:text="@string/forgotPWD"
        android:textColor="@color/textColor"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:layout_width="135dp"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:background="#BAB3B3"
        app:layout_constraintBottom_toTopOf="@+id/facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forpwd"
        app:layout_constraintVertical_bias="0.505" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal"
        android:text="@string/or"
        android:textAllCaps="true"
        android:textColor="#8B959A"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/facebook"
        app:layout_constraintTop_toBottomOf="@+id/forpwd" />

    <View
        android:layout_width="135dp"
        android:layout_height="1dp"
        android:layout_marginEnd="24dp"
        android:background="#BAB3B3"
        app:layout_constraintBottom_toTopOf="@+id/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forpwd"
        app:layout_constraintVertical_bias="0.494" />

    <ImageButton
        android:id="@+id/twitter"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/buttonloginbackground"
        android:backgroundTint="#76A9EA"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/twitter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/facebook"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/buttonloginbackground"
        android:backgroundTint="#475993"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/facebook"
        app:layout_constraintEnd_toStartOf="@+id/google"
        app:layout_constraintStart_toEndOf="@+id/twitter"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/google"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/buttonloginbackground"
        android:backgroundTint="#DB4A39"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login">

        <TextView
            android:id="@+id/dhAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_weight="0.1"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal"
            android:text="@string/dhAccount"
            android:textColor="@color/textColor"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/linkbackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto"
            android:text="@string/signUp"
            android:textColor="@color/main"
            android:textSize="15dp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434" />


</androidx.constraintlayout.widget.ConstraintLayout>